--- a/src/Backpropagation/MainFrame.form
+++ b/src/Backpropagation/MainFrame.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Backpropagation.MainFrame">
-  <grid id="27dc6" binding="layoutPanel" layout-manager="GridLayoutManager" row-count="15" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="layoutPanel" layout-manager="GridLayoutManager" row-count="14" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
       <xy x="20" y="-16" width="1060" height="594"/>
@@ -18,7 +18,7 @@
       </component>
       <component id="742c5" class="javax.swing.JLabel">
         <constraints>
-          <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Training Recognition Rate"/>
@@ -26,7 +26,7 @@
       </component>
       <component id="d05c1" class="javax.swing.JLabel">
         <constraints>
-          <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Testing Recognition Rate"/>
@@ -51,7 +51,7 @@
       <grid id="8afd3" binding="coordinatePanel" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="14" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="13" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="500" height="500"/>
             <preferred-size width="500" height="500"/>
             <maximum-size width="500" height="500"/>
@@ -78,17 +78,9 @@
           <text value="File not loaded"/>
         </properties>
       </component>
-      <component id="3263a" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Synaptic Weights"/>
-        </properties>
-      </component>
       <component id="7389b" class="javax.swing.JLabel">
         <constraints>
-          <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Zoomer"/>
@@ -96,7 +88,7 @@
       </component>
       <component id="9bedb" class="javax.swing.JSlider" binding="zoomerSlider" custom-create="true">
         <constraints>
-          <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <inverted value="false"/>
@@ -116,19 +108,11 @@
       </component>
       <component id="3f263" class="javax.swing.JButton" binding="generateButton" default-binding="true">
         <constraints>
-          <grid row="14" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="13" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <enabled value="false"/>
           <text value="&amp;Generate"/>
-        </properties>
-      </component>
-      <component id="440d1" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Final Threshold"/>
         </properties>
       </component>
       <component id="9bf7e" class="javax.swing.JLabel">
@@ -163,15 +147,7 @@
           <text value="0.5"/>
         </properties>
       </component>
-      <component id="f0a36" class="javax.swing.JLabel" binding="fThresholdValue">
-        <constraints>
-          <grid row="10" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="?"/>
-        </properties>
-      </component>
-      <component id="e727a" class="javax.swing.JLabel" binding="weightsValue">
+      <component id="9ab42" class="javax.swing.JLabel" binding="trainingValue">
         <constraints>
           <grid row="11" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -179,17 +155,9 @@
           <text value="?"/>
         </properties>
       </component>
-      <component id="9ab42" class="javax.swing.JLabel" binding="trainingValue">
-        <constraints>
-          <grid row="12" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="?"/>
-        </properties>
-      </component>
       <component id="a8255" class="javax.swing.JLabel" binding="testingValue">
         <constraints>
-          <grid row="13" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="?"/>
@@ -237,7 +205,7 @@
       </component>
       <vspacer id="4e8b7">
         <constraints>
-          <grid row="0" column="6" row-span="15" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="6" row-span="14" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <scrollpane id="c4a82">
@@ -260,7 +228,7 @@
       </scrollpane>
       <scrollpane id="a9282">
         <constraints>
-          <grid row="9" column="7" row-span="6" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="7" row-span="5" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -345,6 +313,22 @@
         </constraints>
         <properties>
           <text value="Testing Data"/>
+        </properties>
+      </component>
+      <component id="b5bf2" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Root Mean-Squared Error"/>
+        </properties>
+      </component>
+      <component id="d6b6e" class="javax.swing.JLabel" binding="MSEValue">
+        <constraints>
+          <grid row="10" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="?"/>
         </properties>
       </component>
     </children>
