--- a/src/Backpropagation/MainFrame.form
+++ b/src/Backpropagation/MainFrame.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="layoutPanel" layout-manager="GridLayoutManager" row-count="15" column-count="10" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="-16" width="1196" height="624"/>
+      <xy x="20" y="-16" width="1196" height="670"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -80,7 +80,7 @@
       </component>
       <component id="3f263" class="javax.swing.JButton" binding="generateButton" default-binding="true">
         <constraints>
-          <grid row="13" column="4" row-span="2" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="13" column="4" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <enabled value="false"/>
@@ -361,6 +361,15 @@
         </constraints>
         <properties>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="24b6b" class="javax.swing.JButton" binding="trainByAllDataButton">
+        <constraints>
+          <grid row="14" column="4" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+          <text value="Train By All Data"/>
         </properties>
       </component>
     </children>
